# tui-tasker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
bruno-coll/TUI-tasker/: bruno.json  collection.bru  delete task.bru  get task.bru  insert task.bru  list task.bru  update task.bru
src/todo/adapters/api/: api.py  app.py
src/todo/adapters/notifications/: notif.py
src/todo/adapters/persistence/: sqlite_repository.py
src/todo/adapters/tui/: app.css  app.py
src/todo/application/: ports.py  use_cases.py
src/todo/domain/: task.py
tests/: test_use_cases.py
