[project]
name = "tui-tasker"
version = "0.1.0"
description = "A lightweight TUI application for managing tasks directly from the terminal."
authors = [
    {name = "kylian.gerard",email = "kylian.gerard@etu.unistra.fr"}
]
license = {text = "MIT license"}
# readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "rich (>=14.2.0,<15.0.0)",
    "textual (>=6.11.0,<7.0.0)"
]

[tool.poetry]
packages = [{ include = "todo", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
